[feature] Implementação das alterações propostas pelo front. Principais alterações: Paginação dos endpoints kudos.