@@ -1,19 +1,26 @@
 package br.com.vemser.retrocards.service;
 
 import br.com.vemser.retrocards.dto.page.PageDTO;
+import br.com.vemser.retrocards.dto.retrospective.Retrospective.RetrospectiveDTO;
 import br.com.vemser.retrocards.dto.sprint.SprintCreateDTO;
 import br.com.vemser.retrocards.dto.sprint.SprintDTO;
+import br.com.vemser.retrocards.entity.RetrospectiveEntity;
 import br.com.vemser.retrocards.entity.SprintEntity;
 import br.com.vemser.retrocards.exceptions.NegociationRulesException;
+import br.com.vemser.retrocards.repository.KudoBoxRepository;
+import br.com.vemser.retrocards.repository.KudoCardRepository;
+import br.com.vemser.retrocards.repository.RetrospectiveRepository;
 import br.com.vemser.retrocards.repository.SprintRepository;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -23,29 +30,30 @@ import java.util.stream.Collectors;
 public class SprintService {
 
     private final SprintRepository sprintRepository;
-
     private final ObjectMapper objectMapper;
 
-
     public SprintDTO create(SprintCreateDTO sprintCreateDTO) throws NegociationRulesException {
-        log.info("Criando nova sprint...");
-
+        log.info("Creating a new sprint ...");
         SprintEntity sprintEntity = createToEntity(sprintCreateDTO);
 
-        log.info("Sprint criada com sucesso!");
+        if (sprintCreateDTO.getStartDate().isAfter(sprintCreateDTO.getEndDate())) {
+            throw new NegociationRulesException("Data is wrong!");
+        }
+
+        log.info("Sprint create successfully!");
         return entityToDTO(sprintRepository.save(sprintEntity));
     }
 
     public PageDTO<SprintDTO> listSprintOrdered(Integer pagina, Integer registro) throws NegociationRulesException {
-        log.info("Listando sprints pela data de conclusão...");
-        if (!sprintRepository.listByEndDateOrderedDesc().isEmpty()) {
-            PageRequest pageRequest = PageRequest.of(pagina, registro, Sort.by("endDate").descending());
-            Page<SprintEntity> page = sprintRepository.findAll(pageRequest);
-            List<SprintDTO> sprintsDTO = page.getContent().stream()
-                    .map(this::entityToDTO).collect(Collectors.toList());
-            return new PageDTO<>(page.getTotalElements(), page.getTotalPages(), pagina, registro, sprintsDTO);
+        PageRequest pageRequest = PageRequest.of(pagina, registro, Sort.by("endDate").descending());
+        Page<SprintEntity> page = sprintRepository.findAll(pageRequest);
+        if (!page.isEmpty()) {
+            List<SprintDTO> sprintDTO = page.getContent().stream()
+                    .map(this::entityToDTO)
+                    .toList();
+            return new PageDTO<>(page.getTotalElements(), page.getTotalPages(), pagina, registro, sprintDTO);
         } else {
-            throw new NegociationRulesException("Não foi possível realizar a lista de sprints.");
+            throw new NegociationRulesException("Não foi possível realizar a listagem das sprints.");
         }
     }
 
@@ -53,7 +61,7 @@ public class SprintService {
 
     public SprintEntity findById(Integer idSprint) throws NegociationRulesException {
         return sprintRepository.findById(idSprint)
-                .orElseThrow(() -> new NegociationRulesException("Sprint not found"));
+                .orElseThrow(() -> new NegociationRulesException("Sprint not found!"));
     }
 
     public SprintEntity createToEntity(SprintCreateDTO sprintCreateDTO) {
@@ -61,6 +69,7 @@ public class SprintService {
     }
 
     public SprintDTO entityToDTO(SprintEntity sprintEntity) {
-        return objectMapper.convertValue(sprintEntity, SprintDTO.class);
+        SprintDTO sprintDTO = objectMapper.convertValue(sprintEntity, SprintDTO.class);
+        return sprintDTO;
     }
 }
